--- a/Tester/MainEntry.resx
+++ b/Tester/MainEntry.resx
@@ -117,4 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="txtMsgBoxText.Text" xml:space="preserve">
+    <value>一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
+一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
+一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
+一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
+一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
+一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十
+</value>
+  </data>
 </root>
